--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ p{
 }
 /*testimonial*/
 #testimonials{
-	padding: 7% 15%;
+	
 	text-align: center;
 	background-color: #f53b57;
 	color: white;
@@ -94,4 +94,7 @@ p{
 .press_logo{
 	width: 12%;
 	margin: 20px 20px 50px;
+}
+.carousel-item{
+	padding: 7% 15%;
 }
