--- a/style.css
+++ b/style.css
@@ -98,3 +98,11 @@ p{
 .carousel-item{
 	padding: 7% 15%;
 }
+/*pricing section*/
+#pricing{
+	padding: 100px;
+	text-align: center;
+}
+.pricing-column{
+	padding: 3% 2%;
+}
