--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 	font-family: roboto;
 }
 .container-fluid{
-	padding:3% 15%;
+	padding:3% 15% 7%;
 }
 .nav-link{
 	color: white;
@@ -52,6 +52,8 @@ p{
 .title-image{
 	width: 60%;
 	transform: rotate(25deg);
+	position: absolute;
+	right: 30%;
 }
 #title{
 	background-color: #f53b57;
@@ -59,6 +61,9 @@ p{
 /*feature sections*/
 #features{
 	padding: 7% 15%;
+	background-color: white;
+	position: relative;
+	
 }
 .feature-box{
 	text-align: center;
@@ -105,4 +110,13 @@ p{
 }
 .pricing-column{
 	padding: 3% 2%;
+}
+@media (max-width: 1280px){
+	#title{
+		text-align: center;
+	}
+	.title-image{
+		position: static;
+		transform: rotate(0);
+	}
 }
