--- a/style.css
+++ b/style.css
@@ -120,3 +120,22 @@ p{
 		transform: rotate(0);
 	}
 }
+#cta{
+	background-color: #f53b57;
+	color: white;
+	padding: 7% 15%;
+	text-align: center;
+
+}
+.cta-heading{
+	font-size: 3.5rem;
+	line-height: 1.5;
+	font-family: Roboto;
+}
+#footer{
+	padding: 7% 15%;
+	text-align: center;
+}
+.social-icon{
+	margin:20px 10px;
+}
