--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .navbar-toggler-icon{
-	background-image:url(download1.png);
+	background-image:url(/mypage/download1.png);
 background-size: cover;
 }
 body{
